// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`c-entity-category-field Renders \`c-entity-category-field\` with custom props and open select 1`] = `
<div
  class="v-input mt-0 theme--light v-text-field v-select"
>
  <div
    class="v-input__control"
  >
    <div
      aria-expanded="false"
      aria-haspopup="listbox"
      class="v-input__slot"
      role="button"
    >
      <div
        class="v-select__slot"
      >
        <label
          class="v-label theme--light"
          style="left: 0px; position: absolute;"
        >
          Category
        </label>
        <div
          class="v-select__selections"
        >
          <input
            aria-readonly="false"
            autocomplete="off"
            readonly="readonly"
            type="text"
          />
        </div>
        <div
          class="v-input__append-inner"
        >
          <div />
        </div>
        <div
          class="v-input__append-inner"
        >
          <div
            class="v-input__icon v-input__icon--append"
          >
            <i
              aria-hidden="true"
              class="v-icon notranslate material-icons theme--light"
            >
              arrow_drop_down
            </i>
          </div>
        </div>
        <input
          name="category"
          type="hidden"
        />
      </div>
      <div
        class="v-menu"
      >
        <!---->
      </div>
    </div>
    <div
      class="v-text-field__details"
    >
      <div
        class="v-messages theme--light"
      >
        <transition-group-stub
          class="v-messages__wrapper"
          name="message-transition"
          tag="div"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`c-entity-category-field Renders \`c-entity-category-field\` with custom props and open select 2`] = `undefined`;

exports[`c-entity-category-field Renders \`c-entity-category-field\` with default props and open select 1`] = `
<div
  class="v-input mt-0 theme--light v-text-field v-select"
>
  <div
    class="v-input__control"
  >
    <div
      aria-expanded="false"
      aria-haspopup="listbox"
      class="v-input__slot"
      role="button"
    >
      <div
        class="v-select__slot"
      >
        <label
          class="v-label theme--light"
          style="left: 0px; position: absolute;"
        >
          Category
        </label>
        <div
          class="v-select__selections"
        >
          <input
            aria-readonly="false"
            autocomplete="off"
            readonly="readonly"
            type="text"
          />
        </div>
        <div
          class="v-input__append-inner"
        >
          <div />
        </div>
        <div
          class="v-input__append-inner"
        >
          <div
            class="v-input__icon v-input__icon--append"
          >
            <i
              aria-hidden="true"
              class="v-icon notranslate material-icons theme--light"
            >
              arrow_drop_down
            </i>
          </div>
        </div>
        <input
          name="category"
          type="hidden"
        />
      </div>
      <div
        class="v-menu"
      >
        <!---->
      </div>
    </div>
    <div
      class="v-text-field__details"
    >
      <div
        class="v-messages theme--light"
      >
        <transition-group-stub
          class="v-messages__wrapper"
          name="message-transition"
          tag="div"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`c-entity-category-field Renders \`c-entity-category-field\` with default props and open select 2`] = `undefined`;

exports[`c-entity-category-field Renders \`c-entity-category-field\` with default props and pending 1`] = `
<div
  class="v-input mt-0 v-input--is-loading theme--light v-text-field v-select"
>
  <div
    class="v-input__control"
  >
    <div
      aria-expanded="false"
      aria-haspopup="listbox"
      class="v-input__slot"
      role="button"
    >
      <div
        class="v-select__slot"
      >
        <label
          class="v-label theme--light"
          style="left: 0px; position: absolute;"
        >
          Category
        </label>
        <div
          class="v-select__selections"
        >
          <input
            aria-readonly="false"
            autocomplete="off"
            readonly="readonly"
            type="text"
          />
        </div>
        <div
          class="v-input__append-inner"
        >
          <div />
        </div>
        <div
          class="v-input__append-inner"
        >
          <div
            class="v-input__icon v-input__icon--append"
          >
            <i
              aria-hidden="true"
              class="v-icon notranslate material-icons theme--light"
            >
              arrow_drop_down
            </i>
          </div>
        </div>
        <input
          name="category"
          type="hidden"
        />
      </div>
      <div
        class="v-menu"
      >
        <!---->
      </div>
      <div
        aria-valuemax="100"
        aria-valuemin="0"
        class="v-progress-linear v-progress-linear--absolute v-progress-linear--visible theme--light"
        role="progressbar"
        style="height: 2px;"
      >
        <div
          class="v-progress-linear__background primary"
          style="opacity: 0.3; left: 0%; width: 100%;"
        />
        <div
          class="v-progress-linear__buffer"
        />
        <transition-stub
          name="fade-transition"
        >
          <div
            class="v-progress-linear__indeterminate v-progress-linear__indeterminate--active"
          >
            <div
              class="v-progress-linear__indeterminate long primary"
            />
            <div
              class="v-progress-linear__indeterminate short primary"
            />
          </div>
        </transition-stub>
      </div>
    </div>
    <div
      class="v-text-field__details"
    >
      <div
        class="v-messages theme--light"
      >
        <transition-group-stub
          class="v-messages__wrapper"
          name="message-transition"
          tag="div"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`c-entity-category-field Renders \`c-entity-category-field\` with default props correctly 1`] = `
<div
  class="v-input mt-0 theme--light v-text-field v-select"
>
  <div
    class="v-input__control"
  >
    <div
      aria-expanded="false"
      aria-haspopup="listbox"
      class="v-input__slot"
      role="button"
    >
      <div
        class="v-select__slot"
      >
        <label
          class="v-label theme--light"
          style="left: 0px; position: absolute;"
        >
          Category
        </label>
        <div
          class="v-select__selections"
        >
          <input
            aria-readonly="false"
            autocomplete="off"
            readonly="readonly"
            type="text"
          />
        </div>
        <div
          class="v-input__append-inner"
        >
          <div />
        </div>
        <div
          class="v-input__append-inner"
        >
          <div
            class="v-input__icon v-input__icon--append"
          >
            <i
              aria-hidden="true"
              class="v-icon notranslate material-icons theme--light"
            >
              arrow_drop_down
            </i>
          </div>
        </div>
        <input
          name="category"
          type="hidden"
        />
      </div>
      <div
        class="v-menu"
      >
        <!---->
      </div>
    </div>
    <div
      class="v-text-field__details"
    >
      <div
        class="v-messages theme--light"
      >
        <transition-group-stub
          class="v-messages__wrapper"
          name="message-transition"
          tag="div"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`c-entity-category-field Renders \`c-entity-category-field\` with validator error 1`] = `
<div
  class="v-input mt-0 v-input--has-state theme--light v-text-field v-select error--text"
>
  <div
    class="v-input__control"
  >
    <div
      aria-expanded="false"
      aria-haspopup="listbox"
      class="v-input__slot"
      role="button"
    >
      <div
        class="v-select__slot"
      >
        <label
          class="v-label theme--light error--text"
          style="left: 0px; position: absolute;"
        >
          Category
        </label>
        <div
          class="v-select__selections"
        >
          <input
            aria-readonly="false"
            autocomplete="off"
            readonly="readonly"
            type="text"
          />
        </div>
        <div
          class="v-input__append-inner"
        >
          <div
            class="v-input__icon v-input__icon--append"
          >
            <i
              aria-hidden="true"
              class="v-icon notranslate material-icons theme--light error--text"
            >
              arrow_drop_down
            </i>
          </div>
        </div>
        <input
          name="category"
          type="hidden"
        />
      </div>
      <div
        class="v-menu"
      >
        <!---->
      </div>
    </div>
    <div
      class="v-text-field__details"
    >
      <div
        class="v-messages theme--light error--text"
        role="alert"
      >
        <transition-group-stub
          class="v-messages__wrapper"
          name="message-transition"
          tag="div"
        >
          <div
            class="v-messages__message"
          >
            The field is required
          </div>
        </transition-group-stub>
      </div>
    </div>
  </div>
</div>
`;
